kubernetes/manifest/base/webui-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
      alb.ingress.kubernetes.io/backend-protocol: HTTP
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
      alb.ingress.kubernetes.io/scheme: internal
      alb.ingress.kubernetes.io/subnets: cops-prod-1x0-subnet-main-a-private, cops-prod-1x0-subnet-main-b-private, cops-prod-1x0-subnet-main-c-private
      alb.ingress.kubernetes.io/target-type: ip
      kubernetes.io/ingress.class: alb
    labels:
      app: evy
    name: evy-lb
    namespace: open-webui
  spec:
    rules:
    - host: evie.cmh.platform-cicd-test.evinternal.net
      http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: open-webui-service
              port:
                number: 8080
